[package]
name = "rclock"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.19", features = ["derive"] }
crossterm = "0.25.0"
termcolor = "1.1.3"
terminal_size = "0.2.2"
